// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: v-once > as root node 1`] = `
"import { children as _children, setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  const { 0: [n1],} = _children(n0)
  _setDynamicProp(n1, "id", _ctx.foo)
  return n0
}"
`;

exports[`compiler: v-once > basic 1`] = `
"import { children as _children, createTextNode as _createTextNode, setText as _setText, setClass as _setClass, prepend as _prepend, template as _template } from 'vue/vapor';
const t0 = _template("<div><span></span></div>")

export function render(_ctx) {
  const n0 = t0()
  const { 0: [n3, { 0: [n2],}],} = _children(n0)
  const n1 = _createTextNode()
  _setText(n1, _ctx.msg, " ")
  _setClass(n2, _ctx.clz)
  _prepend(n3, n1)
  return n0
}"
`;

exports[`compiler: v-once > inside v-once 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<div><div></div></div>")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler: v-once > on nested plain element 1`] = `
"import { children as _children, setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div><div></div></div>")

export function render(_ctx) {
  const n0 = t0()
  const { 0: [, { 0: [n1],}],} = _children(n0)
  _setDynamicProp(n1, "id", _ctx.foo)
  return n0
}"
`;
